manifests/bootstrap/kargo/kargo-referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: kargo-traefik-grant
  namespace: kargo
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: traefik
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: traefik
  to:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
    - group: ""
      kind: Service
