manifests/bootstrap/kargo/kargo-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kargo
  namespace: kargo
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: kargo
  hostnames:
    - "kargo.smapatticare.com"
  rules:
    - backendRefs:
        - name: kargo-api
          port: 80
